test_fixtures/if/var_in_else.lox
// ParserError: UnexpectedExpressionToken found Var from l2c22 to l2c25
if (true) "ok"; else var foo;
